prevent horizontal scrolling

--- a/public/style.css
+++ b/public/style.css
@@ -8,8 +8,9 @@
   font-family: var(--sans);
 }
 
-body {
+html, body {
   margin: 0;
   color: var(--text);
   overflow-x: hidden;
+  max-width: 100%;
 }
